# biocreative_data

./: README.md  README.txt
IAT/: PMID  README.txt  annotations.txt  build_genePmcIndex.perl  build_index.perl  build_index.sh  build_pmidIndex.perl  geneIndex.GNSuite.txt  geneIndex.txt.bak  pmcids.txt  pmidIndex.txt
IAT/crfsuite-0.11/: Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  (+2 more)
IAT/nersuite-1.0/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  test.tok
IAT/nersuite-1.0/sample/: test.gtag  test.txt
IAT/nersuite-1.0/src/gtagger/: Makefile  Makefile.am  Makefile.in  nersuite_gtagger  run.gtagger.cpp
IAT/nersuite-1.0/src/gtagger/.deps/: nersuite_gtagger-bidir.Po  nersuite_gtagger-chunking.Po  nersuite_gtagger-maxent.Po  nersuite_gtagger-morph.Po  nersuite_gtagger-postag.Po  nersuite_gtagger-run.gtagger.Po  nersuite_gtagger-tokenize.Po
IAT/nersuite-1.0/src/gtagger/geniatagger-3.0.1/: bidir.cpp
IAT/nersuite-1.0/src/nersuite/: Makefile  Makefile.am  Makefile.in  nersuite.cpp  nersuite.h  nersuite_main  typedefs.h
IAT/nersuite-1.0/src/nersuite/.deps/: nersuite_main-FExtor.Po  nersuite_main-nersuite.Po  nersuite_main-string_utils.Po  nersuite_main-text_loader.Po
IAT/nersuite-1.0/src/nersuite/FExtor/: FExtor.cpp  FExtor.h
IAT/nersuite-1.0/src/nersuite/optparse/: optparse.h  optparse.nersuite.h
IAT/nersuite-1.0/src/nersuite/text_loader/: text_loader.cpp  text_loader.h
IAT/nersuite-1.0/src/tokenizer/: Makefile  Makefile.am  Makefile.in  nersuite_tokenizer  run.tokenizer.cpp  tokenizer.cpp  tokenizer.h
IAT/nersuite-1.0/src/tokenizer/.deps/: nersuite_tokenizer-run.tokenizer.Po  nersuite_tokenizer-tokenizer.Po
(+35650 files in other folders)
