# $Id:$

bin_PROGRAMS = nersuite_tokenizer

#man_MANS = nersuite.tokenizer.1

#EXTRA_DIST = ${man_MANS}

#EXTRA_DIST =

nersuite_tokenizer_SOURCES = \
	run.tokenizer.cpp \
	tokenizer.cpp \
	tokenizer.h

nersuite_tokenizer_CPPFLAGS =
INCLUDES =
AM_LDFLAGS =

#AM_CFLAGS = @CFLAGS@
#INCLUDES = @INCLUDES@
#AM_LDFLAGS = @LDFLAGS@


